# A-ROS2-based-Navigation-program-for-Create3

Polynomial regression/: regression.py  sensor.csv  sensor_all.csv
navigator/: CMakeLists.txt  package.xml
navigator/include/navigator/: NavigatorNode.hpp
navigator/launch/: navigator.launch.py
navigator/src/: navigator_main.cpp
navigator/src/navigator/: NavigatorNode.cpp
